package formacaoJavaDeveloper.poo.diagramacaoClassesIphone.java.contract;

public interface AparelhoTelefonico {
    void ligar();
    void atender();
    void iniciarCorreioVoz();
}
