package formacaoJavaDeveloper.poo.diagramacaoClassesIphone.java.contract;

public interface NavegadorNaInternet {
    void exibirPagina();
    void adicionarNovaAba();
    void atualizarPagina();
}
