package formacaoJavaDeveloper.poo.diagramacaoClassesIphone.java.contract;

public interface ReprodutorMusical {
    void tocar();
    void pausar();
    void selecionarMusica();
}
