package formacaoJavaDeveloper.poo.diagramacaoClassesIphone.java.model;

import formacaoJavaDeveloper.poo.diagramacaoClassesIphone.java.contract.ReprodutorMusical;

public class IPod implements ReprodutorMusical{

    @Override
    public void tocar() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'tocar'");
    }

    @Override
    public void pausar() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'pausar'");
    }

    @Override
    public void selecionarMusica() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'selecionarMusica'");
    }
    
}
