package formacaoJavaDeveloper.poo.diagramacaoClassesIphone.java.model;

import formacaoJavaDeveloper.poo.diagramacaoClassesIphone.java.contract.NavegadorNaInternet;

public class InternetExplorer implements NavegadorNaInternet {

    @Override
    public void exibirPagina() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'exibirPagina'");
    }

    @Override
    public void adicionarNovaAba() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'adicionarNovaAba'");
    }

    @Override
    public void atualizarPagina() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'atualizarPagina'");
    }
    
}
