package formacaoJavaDeveloper.poo.diagramacaoClassesIphone.java.model;

import formacaoJavaDeveloper.poo.diagramacaoClassesIphone.java.contract.AparelhoTelefonico;

public class NokiaTijolao implements AparelhoTelefonico{

    @Override
    public void ligar() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'ligar'");
    }

    @Override
    public void atender() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'atender'");
    }

    @Override
    public void iniciarCorreioVoz() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'iniciarCorreioVoz'");
    }
    
}
